# docs/swagger.json
@@ -878,6 +878,12 @@
                         "type": "string"
                     }
                 },
+                "internetSource": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "mainLiterature": {
                     "type": "array",
                     "items": {
@@ -938,6 +944,9 @@
                     "type": "string"
                 },
                 "discussion2": {
+                    "type": "string"
+                },
+                "insertedIn": {
                     "type": "string"
                 },
                 "madeBy": {
